fixed overflow scrolling

--- a/src/App.scss
+++ b/src/App.scss
@@ -41,8 +41,8 @@ body{
 }
 
 
-.followme, .discover{
-	height: 120vh;
+.followme, .discover, .nav-column{
+	height: 100vh;
 	overflow-y: scroll;
 	::-webkit-scrollbar { 
 		display: none; 
